# url-ast

./: .gitignore  .npmignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  build.ts  docusaurus.config.ts  eslint.config.js  mdx-components.js  next.config.ts  package.json  publish.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yaml  ci.yml  docs.yml  publish.yml  test.yml
api/: typedoc-sidebar.cjs
api/functions/: registerUserProfile.md
app/: globals.css  layout.tsx  manifest.ts
bench/: package.json
benchmarks/: constructor.ts  state.ts
examples/: 01-basic-parsing.ts  02-dynamic-path-params.ts  03-search-params.ts  04-nextjs-style-routes.ts  05-type-casting.ts  06-typescript-inference.ts  07-error-handling.ts  path-casting-demo.ts  type-inference-demo.ts
scripts/: build-wasm.sh
src/: browser.ts  index.ts  initWasm.ts  initWasmSync.ts  parse.ts  wasmBridge.ts  wasmState.ts
test/: analyze.errors.test.ts  analyze.origin.test.ts  analyze.params.test.ts  analyze.path-casting.test.ts  analyze.static-props.test.ts  analyze.utils.test.ts  controller.analyze.buffer.test.ts  controller.analyze.defaults.test.ts  controller.analyze.errors.test.ts  controller.analyze.optional-bracket.test.ts  controller.analyze.origin.test.ts  controller.analyze.params.test.ts  controller.analyze.path-casting.test.ts  controller.analyze.static-props.test.ts  controller.analyze.utils.test.ts  controller.ast.test.ts  controller.node.test.ts  types.node.annotation.test.ts  utils.test.ts
types/: validator.ts
wasm/: bridge.rs  lib.rs
(+104 files in other folders)
