[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm/lib.rs"

[dependencies]
js-sys = "0.3.94"
wasm-bindgen = "0.2.116"

[profile.release]
opt-level = "z"   # optimize aggressively for size
lto = "fat"       # whole-program LTO drops dead code across crates
codegen-units = 1 # single unit = best cross-function size optimization
panic = "abort"   # no unwinding tables
strip = true      # drop symbols/debug info

# The Rust 1.8x/1.9x wasm backend emits bulk-memory + sign-ext + nontrapping-fptoint
# ops by default. Tell the bundled wasm-opt to accept (and optimize) them.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
	"-Oz",
	"--enable-bulk-memory",
	"--enable-sign-ext",
	"--enable-nontrapping-float-to-int",
	"--enable-mutable-globals",
]